--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "mern-infrastructure",
   "version": "0.1.0",
+  "engines": {
+    "node": "18.15.0"
+  },
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -19,11 +22,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "seed": "node seed.js"
+    "seed": "node seed.js", 
+    "heroku-prebuild": "npm install"
   },
   "eslintConfig": {
     "extends": [
